--- a/CV_notes.tex
+++ b/CV_notes.tex
@@ -38,7 +38,8 @@ fleqn
 	\include{Contents/visual-odometry.tex}
 	\include{Contents/slam.tex}
 	\include{Contents/dl-video-analysis.tex}
-	\include{Contents/formulas.tex}	
+	\include{Contents/formulas.tex}
+	\include{Contents/cv-research-proposal.tex}
 	
 	\backmatter
 	\pagenumbering{Roman}
