--- a/Contents/abbrievations.tex
+++ b/Contents/abbrievations.tex
@@ -72,6 +72,8 @@
 	\acro{GAN}{Generative Adversarial Network}
 	\acro{DCGAN}{Deep Convolutional Generative Adversarial Network}
 	\acro{CGAN}{Conditional Generative Adversarial Network}
+	\acro{SRGAN}{Super Resolution Generative Adversarial Network}
+	\acro{ESRGAN}{Enhanced Super Resolution Generative Adversarial Network}
 	\acro{ResNet}{Residual Network}	
 	
 	% Probabilistic Robotics
@@ -102,8 +104,11 @@
 	\acro{IRL}{Inverse Reinforcement Learning}
 	\acro{MaxEnt}{Maximum Entropy}
 	\acro{MAML}{Model-Agnostic Meta-Learning}
+	\acro{OPE}{Off-policy evaluation}
 	
 	% Computer vision related
 	\acro{DPM}{Deformable Part Model}
 	\acro{HOG}{Histogram of Oriented Gradients}
+	\acro{SSIM}{Structural Similarity Index}
+	\acro{SRCNN}{Super Resolution Convolutional Neural Network}
 \end{acronym}
