--- a/Contents/bibliography.bib
+++ b/Contents/bibliography.bib
@@ -8,8 +8,10 @@
 @STRING{arso	= {Proc.~of the IEEE Workshop on Advanced Robotics and its Social Impacts (ARSO)} }
 @STRING{cvpr    = {Proc.~of the IEEE/CVF Int.~Conf.~on Computer Vision and Pattern Recognition (CVPR)} }
 @STRING{iccv    = {Proc.~of the IEEE Int.~Conf.~on Computer Vision (ICCV)} }
+@STRING{eccv    = {Proc.~of the European Conference on Computer Vision (ECCV)} }
 @STRING{flairs	 = {Proc.~of the Int.~Conf.~of Florida Artificial Intelligence Research Society (FLAIRS)} }
 @STRING{icml	= {Proc.~of the Int.~Conf.~on Machine Learning (ICML} }
+@STRING{ecml	= {Proc.~of the European ~Conf.~on Machine Learning (ECML} }
 @STRING{icar    = {Proc.~of the Int.~Conf.~on Advanced Robotics (ICAR)} }
 @STRING{icra    = {Proc.~of the IEEE Intl.~Conf.~on Robotics \& Automation (ICRA)} }
 @STRING{iecon   = {Proc.~of the IEEE Anl.~Conf.~on Industrial Electronics Society (IECON)} }
@@ -61,7 +63,7 @@
 	publisher={Ap. Gul Cavellat}
 }
 @book{thrun2006probalistic,
-	title={Probalistic robotics},
+	title={Probalistic Robotics},
 	author={Thrun, Sebastian and Burgard, Wolfram and Fox, Dieter},
 	year={2006},
 	publisher={Emerald Group Publishing Limited}
@@ -265,7 +267,7 @@
 @inproceedings{riedmiller2005neural,
 	title={Neural fitted Q iteration--first experiences with a data efficient neural reinforcement learning method},
 	author={Riedmiller, Martin},
-	booktitle={European Conference on Machine Learning},
+	booktitle=ecml,
 	pages={317--328},
 	year={2005},
 	organization={Springer}
@@ -593,14 +595,6 @@
 	author={Schulman, John and Chen, Xi and Abbeel, Pieter},
 	journal={arXiv preprint arXiv:1704.06440},
 	year={2017}
-}
-@inproceedings{haarnoja2018soft,
-	title={Soft actor-critic: Off-policy maximum entropy deep reinforcement learning with a stochastic actor},
-	author={Haarnoja, Tuomas and Zhou, Aurick and Abbeel, Pieter and Levine, Sergey},
-	booktitle=icml,
-	pages={1861--1870},
-	year={2018},
-	organization={PMLR}
 }
 @article{levine2018reinforcement,
 	title={Reinforcement learning and control as probabilistic inference: Tutorial and review},
@@ -1185,6 +1179,194 @@
 	pages={137},
 	year={2019},
 	publisher={Frontiers Media SA}
+}
+@book{siciliano2008springer,
+	title={Springer Gandbook of Robotics},
+	author={Siciliano, Bruno and Khatib, Oussama and Kr{\"o}ger, Torsten},
+	volume={200},
+	year={2008},
+	publisher={Springer}
+}
+@article{shimonomura2019tactile,
+	title={Tactile image sensors employing camera: A review},
+	author={Shimonomura, Kazuhiro},
+	journal={Sensors},
+	volume={19},
+	number={18},
+	pages={3933},
+	year={2019},
+	publisher={MDPI}
+}
+@article{luo2017robotic,
+	title={Robotic tactile perception of object properties: A review},
+	author={Luo, Shan and Bimbo, Joao and Dahiya, Ravinder and Liu, Hongbin},
+	journal={Mechatronics},
+	volume={48},
+	pages={54--67},
+	year={2017},
+	publisher={Elsevier}
+}
+@article{yamaguchi2019recent,
+	title={Recent progress in tactile sensing and sensors for robotic manipulation: can we turn tactile sensing into vision?},
+	author={Yamaguchi, Akihiko and Atkeson, Christopher G},
+	journal={Advanced Robotics},
+	volume={33},
+	number={14},
+	pages={661--673},
+	year={2019},
+	publisher={Taylor \& Francis}
+}
+@article{gatys2015neural,
+	title={A neural algorithm of artistic style},
+	author={Gatys, Leon A and Ecker, Alexander S and Bethge, Matthias},
+	journal={arXiv preprint arXiv:1508.06576},
+	year={2015}
+}
+@inproceedings{ruder2016artistic,
+	title={Artistic style transfer for videos},
+	author={Ruder, Manuel and Dosovitskiy, Alexey and Brox, Thomas},
+	booktitle={German Conference on Pattern Recognition},
+	pages={26--36},
+	year={2016},
+	organization={Springer}
+}
+@inproceedings{johnson2016perceptual,
+	title={Perceptual losses for real-time style transfer and super-resolution},
+	author={Johnson, Justin and Alahi, Alexandre and Fei-Fei, Li},
+	booktitle=eccv,
+	pages={694--711},
+	year={2016},
+	organization={Springer}
+}
+@article{dong2015image,
+	title={Image super-resolution using deep convolutional networks},
+	author={Dong, Chao and Loy, Chen Change and He, Kaiming and Tang, Xiaoou},
+	journal={IEEE Transactions on Pattern Analysis and Machine Intelligence},
+	volume={38},
+	number={2},
+	pages={295--307},
+	year={2015},
+	publisher={IEEE}
+}
+@inproceedings{ledig2017photo,
+	title={Photo-realistic single image super-resolution using a generative adversarial network},
+	author={Ledig, Christian and Theis, Lucas and Husz{\'a}r, Ferenc and Caballero, Jose and Cunningham, Andrew and Acosta, Alejandro and Aitken, Andrew and Tejani, Alykhan and Totz, Johannes and Wang, Zehan and others},
+	booktitle=cvpr,
+	pages={4681--4690},
+	year={2017}
+}
+@inproceedings{wang2018esrgan,
+	title={ESRGANEnhanced super-resolution generative adversarial networks},
+	author={Wang, Xintao and Yu, Ke and Wu, Shixiang and Gu, Jinjin and Liu, Yihao and Dong, Chao and Qiao, Yu and Change Loy, Chen},
+	booktitle=eccv,
+	pages={0--0},
+	year={2018}
+}
+@article{wang2004image,
+	title={Image quality assessment: from error visibility to structural similarity},
+	author={Wang, Zhou and Bovik, Alan C and Sheikh, Hamid R and Simoncelli, Eero P},
+	journal={IEEE Transactions on Image Processing},
+	volume={13},
+	number={4},
+	pages={600--612},
+	year={2004},
+	publisher={IEEE}
+}
+@article{wang2009mean,
+	title={Mean squared error: Love it or leave it? A new look at signal fidelity measures},
+	author={Wang, Zhou and Bovik, Alan C},
+	journal={IEEE Signal Processing Magazine},
+	volume={26},
+	number={1},
+	pages={98--117},
+	year={2009},
+	publisher={IEEE}
+}
+@inproceedings{haarnoja2018soft,
+	title={Soft Actor-Critic: Off-Policy Maximum Entropy Deep Reinforcement Learning with a Stochastic Actor},
+	author={Haarnoja, Tuomas and Zhou, Aurick and Abbeel, Pieter and Levine, Sergey},
+	booktitle=icml,
+	pages={1861--1870},
+	year={2018},
+	organization={PMLR}
+}
+@inproceedings{peters2005natural,
+	title={Natural Actor-Critic},
+	author={Peters, Jan and Vijayakumar, Sethu and Schaal, Stefan},
+	booktitle=ecml,
+	pages={280--291},
+	year={2005},
+	organization={Springer}
+}
+@article{levine2020offline,
+	title={Offline Reinforcement Learning: Tutorial, Review, and Perspectives on Open Problems},
+	author={Levine, Sergey and Kumar, Aviral and Tucker, George and Fu, Justin},
+	journal={arXiv preprint arXiv:2005.01643},
+	year={2020}
+}
+@article{singh2020cog,
+	title={Cog: Connecting new skills to past experience with offline reinforcement learning},
+	author={Singh, Avi and Yu, Albert and Yang, Jonathan and Zhang, Jesse and Kumar, Aviral and Levine, Sergey},
+	journal={arXiv preprint arXiv:2010.14500},
+	year={2020}
+}
+@article{kumar2019stabilizing,
+	title={Stabilizing off-policy q-learning via bootstrapping error reduction},
+	author={Kumar, Aviral and Fu, Justin and Soh, Matthew and Tucker, George and Levine, Sergey},
+	journal=NeurIPS,
+	volume={32},
+	year={2019}
+}
+@article{precup2000eligibility,
+	title={Eligibility traces for off-policy policy evaluation},
+	author={Precup, Doina},
+	journal={Computer Science Department Faculty Publication Series},
+	pages={80},
+	year={2000}
+}
+@article{peshkin2002learning,
+	title={Learning from scarce experience},
+	author={Peshkin, Leonid and Shelton, Christian R},
+	journal={arXiv preprint cs/0204043},
+	year={2002}
+}
+@inproceedings{jiang2016doubly,
+	title={Doubly robust off-policy value evaluation for reinforcement learning},
+	author={Jiang, Nan and Li, Lihong},
+	booktitle=icml,
+	pages={652--661},
+	year={2016},
+	organization={PMLR}
+}
+@inproceedings{thomas2016data,
+	title={Data-efficient off-policy policy evaluation for reinforcement learning},
+	author={Thomas, Philip and Brunskill, Emma},
+	booktitle=icml,
+	pages={2139--2148},
+	year={2016},
+	organization={PMLR}
+}
+@inproceedings{thomas2015high,
+	title={High-confidence off-policy evaluation},
+	author={Thomas, Philip and Theocharous, Georgios and Ghavamzadeh, Mohammad},
+	booktitle={Proceedings of the AAAI Conference on Artificial Intelligence},
+	volume={29},
+	number={1},
+	year={2015}
+}
+@inproceedings{hallak2017consistent,
+	title={Consistent on-line off-policy evaluation},
+	author={Hallak, Assaf and Mannor, Shie},
+	booktitle=icml,
+	pages={1372--1383},
+	year={2017},
+	organization={PMLR}
+}
+@article{liu2019off,
+	title={Off-policy policy gradient with state distribution correction},
+	author={Liu, Yao and Swaminathan, Adith and Agarwal, Alekh and Brunskill, Emma},
+	journal={arXiv preprint arXiv:1904.08473},
+	year={2019}
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
