--- a/Contents/rl-overview.tex
+++ b/Contents/rl-overview.tex
@@ -30,6 +30,7 @@ A \ac{RL} problem has 3 major blocks as follows:
 	\item \href{http://rail.eecs.berkeley.edu/deeprlcourse/}{Deep \ac{RL} - CS285, UC Berkeley - Sergey Levine}
 	\item \href{http://ai.berkeley.edu/lecture_videos.fhtml}{CS188 Berkeley AI}
 	\item Reinforcement learning: An introduction \cite{sutton2018reinforcement}
+	\item \href{https://www.tensorflow.org/agents/overview}{\texttt{TensorFlow} Agents' tutorial}
 \end{itemize}
 
 \section{Terminology \& Notation}
