--- a/Contents/robotics-intro.tex
+++ b/Contents/robotics-intro.tex
@@ -3,4 +3,10 @@
 
 This is my personal learning notes for robotics.
 
+\section{Learning Resources}
+\begin{itemize}
+	\item Springer Gandbook of Robotics \cite{siciliano2008springer}
+	\item Probalistic Robotics \cite{thrun2006probalistic}
+\end{itemize}
+
 \todo{}
