--- a/Contents/robotics-research-proposal.tex
+++ b/Contents/robotics-research-proposal.tex
@@ -22,7 +22,7 @@ Grasping is one of the critical and unavoidable problems for robot arm manipulat
 
 \section{Approaches and Choice of Methods}
 \subsection{Key Points for Improvement}
-Prior works on robotic manipulators were limited on their utilization of tactile sensors. Complex hand and arm behaviors require some level of force and pressure feedback. Thus, these sensors can potentially leverage the manipulators to the dexterity level of human's arms. However, tactile sensors are currently been used mostly for the development of soft robotics \cite{haddadin2018tactile}. For grasping tasks, despite certain successes from using visual and tactile input separately, there hasn't being a multi-modal approach capable of combining the strengths of both sides, \ie, accurate localization, adaptability to object's weight and deformability. A model, which has knowledge from both visual and tactile sources, promises to deliver complex manipulation tasks with diverse objects.
+Prior works on robotic manipulators were limited on their utilization of tactile sensors. Because complex hand and arm behaviors need force and pressure feedback, leveraging the manipulators to the dexterity level of human's arms requires these sensors. However, tactile sensors are currently been used mostly for the development of soft robotics \cite{haddadin2018tactile}. For grasping tasks, despite certain successes from using visual and tactile input separately, there hasn't being a multi-modal approach capable of combining the strengths of both sides, \ie, accurate localization, adaptability to object properties. A model, which has knowledge from both visual and tactile sources, promises to deliver complex manipulation tasks with diverse objects.
 
 It's still challenging to generalize and apply \ac{RL} to different robotic manipulator's tasks. In general, \ac{RL} did make a convincing case about its potential to surpass human's ability in some specific applications, \eg, playing Go, chess. However, in other fields, practical applications are yet scattered and limited. For robotic manipulators, current focuses are still around object picking and handling tasks \cite{singh2021reinforcement}. One of the major causes for this situation is the current gap in generalization and transfer learning. Directions for improvements are meta-learning, multi-task learning, \etc \cite{kober2013reinforcement}.
 
@@ -30,8 +30,8 @@ It's still challenging to generalize and apply \ac{RL} to different robotic mani
 The progress I wish to work towards concerns robotic collective learning for collaborative tasks. For example, a system of multiple robot arms learning to play 2v2 table tennis, pack an item or cook. Building up towards this progress, I intend to work and gain more experiences on the following problems:
 
 \begin{enumerate}
-	\item A multi-modal approach for robotic picking task: combines visual and tactile input into a \ac{DL} model. I'm curious about what kinds of underlying information (weight, material, deformability) can we extract from (different) tactile sensors.
-	\item Visual imitation learning: copies behaviors from visual demonstrations (videos). Based on previous progress on teleoperation \cite{handa2020dexpilot}, visual imitation learning \cite{finn2017one, sharma2019third}, I want to extend further to learn in different problem settings, with generalized tasks, and also apply offline \ac{RL}.
+	\item A multi-modal approach for robotic picking task: combines visual and tactile input into a \ac{DL} model. Prior works on tactile sensors have proven their potentials in inference of object properties \cite{luo2017robotic} and improving robotic grasping \cite{yamaguchi2019recent}. I want to further extend recent advances in tactile sensors to a multi-modal approach.
+	\item Visual imitation learning: copies behaviors from visual demonstrations (videos). Prior works are still restricted with certain types of input data, tasks \cite{finn2017one, sharma2019third}. 	Based on previous progress on teleoperation \cite{handa2020dexpilot}, I want to extend further to learn in different problem settings, with generalized tasks, and also apply offline \ac{RL}.
 	\item A data collection pipeline for robot manipulators: preferably from using the above visual imitation learning, to map human’s arm movements to manipulator's. The data would contain both visual and tactile information. It would then be used for the learning of other robotic tasks or in other settings (different types of arm, gripper, \etc).
 	\item Meta-learning with different manipulation tasks.
 \end{enumerate}
