--- a/RL_notes.tex
+++ b/RL_notes.tex
@@ -42,6 +42,7 @@ fleqn
 	\include{Contents/meta-learning.tex}
 	\include{Contents/continual-learning.tex}
 	\include{Contents/rl-challenges-open-probs.tex}
+	\include{Contents/rl-research-proposal.tex}
 	
 	\backmatter
 	\pagenumbering{Roman}
